# langchain_tutorial

./: README.md  pyproject.toml
nbs/build_a_chatbot/: 000.ipynb  server.py
nbs/build_a_simple_llm_application_with_lcel/: 000.ipynb  server.py
nbs/build_an_agent/: 000.ipynb  example1.py
nbs/vector_stores_and_retrivers/: 000.ipynb  001.ipynb  prompt.py  server.py  vectore_store.py
