[tool.poetry]
name = "langchain-tutorial"
version = "0.1.0"
description = ""
authors = ["Ashkan Shokri <ash.shokri@csiro.au>"]
readme = "README.md"
packages = [{include = "langchain_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
langchain = "^0.3.0"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.0"
langserve = {extras = ["all"], version = "^0.3.0"}
langchain-anthropic = "^0.2.1"
langchain-community = "^0.3.0"
langchain-chroma = "^0.1.4"
langgraph = "^0.2.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
